# phone-book

./: .gitignore  README.md
client/: client.py  client_command_processor.py  config.txt  main.py
server/: CMakeLists.txt  main.cpp  server.cpp
server/include/: connection_processor.h  contact.h  contacts_storage.h  file_contacts_storage.h  server.h  socket.h
server/src/: connection_processor.cpp  contact.cpp  file_contacts_storage.cpp  server.cpp  socket.cpp
